Set-up HL7 almost complete now.

--- a/New/stylesheets/main.css
+++ b/New/stylesheets/main.css
@@ -23,3 +23,9 @@ img {
 	padding:0px;
 	border:1px solid #999999;
 }
+
+figcaption {
+  padding: 0.5em;
+  border-top: thin silver solid;
+  font-style: italic;
+}
